Add nova Vitrine e ajustando a arquitetura do projeto

--- a/pages/pagesHtml/vitrine.html
+++ b/pages/pagesHtml/vitrine.html
@@ -9,29 +9,29 @@
     <div id="carrim">🛒(<span id="qnt-car">0</span>)</div>
     <div id="item1">
         <h1>Boneco Naruto</h1>
-       <img src="/imagem/boneconaruto.jpg" title="Bonecos Narutos">
+       <img src="../../images/boneconaruto.jpg" title="Bonecos Narutos">
         <p>descrição</p>
 
         <button onclick="addProduto(produtos[1])">🛒</button>
-        <button onclick="mostrarProtudo(produtos[1])"><a  href="descricao.html" target="_blank">💷</a></button>
+        <button onclick="mostrarProtudo(produtos[1])"><a  href="./descricao.html" target="_blank">💷</a></button>
     </div>
     <div id="item1">
         <h1>Boneco Naruto</h1>
-        <img src="/imagem/boneconaruto.jpg" title="Bonecos Narutos">
+        <img src="../../images/boneconaruto.jpg" title="Bonecos Narutos">
         <p>descrição</p>
         <button onclick="addProduto(produtos[0])">🛒</button>
-        <button id="btn" onclick="mostrarProtudo(produtos[0])"><a  href="descricao.html" target="_blank">💷</a></button>
+        <button id="btn" onclick="mostrarProtudo(produtos[0])"><a  href="./descricao.html" target="_blank">💷</a></button>
     </div>
     <div id="item1">
         <h1>Boneco Naruto</h1>
-        <img src="/imagem/boneconaruto.jpg" title="Bonecos Narutos">
+        <img src="../../images/boneconaruto.jpg" title="Bonecos Narutos">
         <p>descrição</p>
         <button onclick="addProduto(produtos[2])">🛒</button>
-        <button onclick="mostrarProtudo(produtos[2])"><a  href="descricao.html?id=${produto[2].id}" target="_blank">💷</a></button>
+        <button onclick="mostrarProtudo(produtos[2])"><a  href="./descricao.html" target="_blank">💷</a></button>
     </div>
   
 
-    <script src="/scrip.js"></script>
+    <script src="../JavaScript/scrip.js"></script>
   
 </body>
 </html>
