--- a/pages/pagesHtml/descricao.html
+++ b/pages/pagesHtml/descricao.html
@@ -8,7 +8,7 @@
 <body>
     <h1 id="titulo"></h1>
     <p id="descricao"></p>
-    <script src="/scrip.js"></script>
+    <script src="../JavaScript/scrip.js"></script>
     <script>descricaoP()</script>
 </body>
 </html>
