--- a/pages/pagesHtml/descricao.html
+++ b/pages/pagesHtml/descricao.html
@@ -4,10 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Produto</title>
+    <link rel="stylesheet" href="estilo.css">
 </head>
 <body>
+    <div id="carrim">🛒(<span id="qnt-car"></span>)</div>
     <h1 id="titulo"></h1>
+    <p id="img"></p>
+    <p id="id"></p>
+    <p id="preco"></p>
     <p id="descricao"></p>
+    <div id="container"></div>
     <script src="../JavaScript/scrip.js"></script>
     <script>descricaoP()</script>
 </body>
