--- a/pages/pagesHtml/vitrine.html
+++ b/pages/pagesHtml/vitrine.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <div id="carrim">🛒(<span id="qnt-car">0</span>)</div>
+    <div id="carrim">🛒(<span id="qnt-car"></span>)</div>
     <div id="item1">
         <h1>Boneco Naruto</h1>
        <img src="../../images/boneconaruto.jpg" title="Bonecos Narutos">
