--- a/pages/pagesHtml/VitrineMurilo.html
+++ b/pages/pagesHtml/VitrineMurilo.html
@@ -11,9 +11,16 @@
 <body>
   <header>
     <nav class="navPrincipal">
-      <a class="navItens" href="#"><img id="logo" src="../../images/logocaverna.png" alt="Logo Caverna Nerd" /></a>
+      <a class="navItens" ><img id="logo" src="../../images/logocaverna.png" alt="Logo Caverna Nerd" /></a>
       <!-- <a href="#">Roupa</a>
                 <a href="#"></a> -->
+      <div class="link">
+        <ul>
+          <li><a href="/pages/pagesHtml/Vendedores.html" target="_blank">Vendedores</a></li>
+          <li><a href="/pages/pagesHtml/formulario.html" target="_blank">Formulario</a></li>
+        </ul>
+      </div>
+      
       <div id="carrim">(<span id="qnt-car"></span>)</div>
     </nav>
     <nav class="secundaria">
@@ -62,28 +69,33 @@
     </div>
     <div class="uniProduto">
       <h2>Luminaria </h2>
-        <img src="../../images/luminaria.jpg" alt="">
-        <p> Esta luminária em formato de controle remoto é a escolha perfeita para quem busca praticidade e estilo na
-          iluminação do ambiente.
-          Com um design moderno e minimalista, ela se integra facilmente a qualquer decoração.</p>
-        <button onclick="mostrarProtudo(produtos[5])"><a href="./descricao.html" target="_blank">💷</a></button>
+      <img src="../../images/luminaria.jpg" alt="">
+      <p> Esta luminária em formato de controle remoto é a escolha perfeita para quem busca praticidade e estilo na
+        iluminação do ambiente.
+        Com um design moderno e minimalista, ela se integra facilmente a qualquer decoração.</p>
+      <button onclick="mostrarProtudo(produtos[5])"><a href="./descricao.html" target="_blank">💷</a></button>
     </div>
     <div class="uniProduto">
       <h2>Conjunto Harry Potter</h2>
       <img src="../../images/harrypotter.jpg" alt="">
-      <p>Este conjunto Harry Potter, que inclui um cachecol e chinelos, é a escolha perfeita para os fãs da saga mágica.</p>
-      <button onclick="mostrarProtudo(produtos[6])"><a href="./descricao.html" target="_blank">💷</a></button></div>
+      <p>Este conjunto Harry Potter, que inclui um cachecol e chinelos, é a escolha perfeita para os fãs da saga mágica.
+      </p>
+      <button onclick="mostrarProtudo(produtos[6])"><a href="./descricao.html" target="_blank">💷</a></button>
+    </div>
     <div class="uniProduto">
       <h2>Messa para jogo RPG</h2>
       <img src="../../images/mesajogorpg.jpg" alt="">
       <p> Esta mesa para RPG é o centro ideal para aventuras épicas e sessões emocionantes com amigos. </p>
-      <button onclick="mostrarProtudo(produtos[7])"><a href="./descricao.html" target="_blank">💷</a></button></div>
+      <button onclick="mostrarProtudo(produtos[7])"><a href="./descricao.html" target="_blank">💷</a></button>
+    </div>
     <div class="uniProduto">
       <h2>Bonecos Naruto</h2>
       <img src="../../images/boneconaruto.jpg" alt="">
       <p> Os bonecos do anime Naruto são colecionáveis que capturam a essência dos personagens icônicos da série.
-        Com detalhes impressionantes e uma variedade de poses, esses bonecos são perfeitos para fãs de todas as idades.</p>
-      <button onclick="mostrarProtudo(produtos[8])"><a href="./descricao.html" target="_blank">💷</a></button></div>
+        Com detalhes impressionantes e uma variedade de poses, esses bonecos são perfeitos para fãs de todas as idades.
+      </p>
+      <button onclick="mostrarProtudo(produtos[8])"><a href="./descricao.html" target="_blank">💷</a></button>
+    </div>
     <div class="uniProduto"></div>
     <div class="uniProduto"></div>
     <div class="uniProduto"></div>
