linkando as paginas

--- a/pages/pagesHtml/principal.html
+++ b/pages/pagesHtml/principal.html
@@ -4,39 +4,50 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Caverna Nerd</title>
-    <link rel="stylesheet" href="../styelsSheets/Principal.css">
+    <link rel="stylesheet" href="/pages/styelsSheets/principal.css">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Cinzel+Decorative:wght@400;700;900&display=swap" rel="stylesheet">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&display=swap" rel="stylesheet">
+
+    <div class="container">
+        <div class="content">
+            <a href="/pages/pagesHtml/VitrineMurilo.html" class="icon-container" target="_blank">
+                <div class="icon icon-fill">
+                    <i class="fa fa-home"></i>
+                    <span class="text">Clique aqui para acessar</span>
+                </div>
+            </a>
+        </div>
+
 </head>
 <body>
     <header>
-        <div id="menu">
-           <button id="bnticon" onclick="abriLogin()"><img src="./imagem/iconelogin.png" alt=""></button><button ><a href="/vitrine.html">lojinha</a></button> <button onclick="abriContato()">Contato</button>
-        </div>
-        
-        <img id="logo" src="/imagem/logocaverna.png" alt="logoCaverna Nerd">
+        <img id="logo" src="/imagem/1.png" alt="logoCaverna Nerd">
     </header>
-    <div id="jnLogin" >
-        <form >
-            <input id="nome" type="text" placeholder="Digite seu nome...">
-            <input id="senha" type="text" placeholder="Digite sua senha...">
-            <button onclick="enviar()">enviar</button>
-        </form>
-    </div>
-   
     <main>
         <div id="home">
-            <div id="">
-                <h1>carverna nerd 🎮⚡</h1>
-                <p>A Caverna Nerd é o refúgio perfeito para os fãs de cultura geek e nerd.<br>
+            <div id="descicaoT">
+                <h1> A Carverna Nerd</h1>
+                <p>é o refúgio perfeito para os fãs de cultura geek e nerd.<br>
                     Com uma atmosfera única e acolhedora, nossa loja oferece uma vasta seleção de acessórios exclusivos para todos os gostos. <br>
                     De action figures e camisetas temáticas de animes, filmes e séries a itens colecionáveis de games e quadrinhos, <br>
                     a Caverna Nerd é o lugar onde cada fã encontra seu tesouro. <br>
                     Aqui, celebramos o mundo geek com produtos de alta qualidade que trazem seus personagens e universos favoritos para mais perto de você.</p>
             </div>
             <div>
-                <img id="imgloja" src="./imagem/carvernaloj.png" alt="">
+                <img id="imgloja" src="/imagem/mockup.png" alt="">
             </div>
         </div>
     </main>
-<script src="./scrip.js"></script>
+
+    <footer>
+        <p>&copy; 2024 Caverna Nerd. Todos os direitos reservados.</p>
+    </footer>
+
 </body>
 </html>
