--- a/pages/pagesHtml/descricao.html
+++ b/pages/pagesHtml/descricao.html
@@ -1,20 +1,55 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<html lang="pt-br">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Produto</title>
-    <link rel="stylesheet" href="estilo.css">
-</head>
-<body>
-    <div id="carrim">🛒(<span id="qnt-car"></span>)</div>
-    <h1 id="titulo"></h1>
-    <p id="img"></p>
-    <p id="id"></p>
-    <p id="preco"></p>
-    <p id="descricao"></p>
-    <div id="container"></div>
-    <script src="../JavaScript/scrip.js"></script>
-    <script>descricaoP()</script>
-</body>
+
+    <link rel="stylesheet" href="../styelsSheets/descricao.css" />
+
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Cinzel+Decorative:wght@400;700;900&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
+    <header>
+      <nav class="Banner">
+        <nav class="Banner">
+            <a href="./principalMichele.html" class="navItens">
+                <img id="logo" src="../../images/logo transp.png" alt="Logo Caverna Nerd" />
+            </a>
+            <div class="navItems">
+                <button class="btn" id="botao">
+                    <a href="../pagesHtml/VitrineMurilo.html" style="color: inherit; text-decoration: none;">Voltar</a>
+                </button>
+                <div id="carrim">(<span id="qnt-car">🛒</span>)</div>
+            </div>
+        </nav>
+    </header>
+    <main>
+     
+      <h1 id="titulo"></h1>
+      <p id="img"></p>
+      <p id="id"></p>
+      <p id="preco"></p>
+      <p id="descricao"></p>
+      <div id="container"></div>
+    </main>
+
+    <script src="../JavaScript/decricao.js"></script>
+    <script>
+      descricaoP();
+    </script>
+    <footer id="criadores">
+      <div>
+        <p>
+          GUSTAVO SANTOS JULIA XAVIER MATEUS AZEVEDO MICHELE MOREIRA MURILO
+          BONGARD VITOR FERREIRA
+        </p>
+      </div>
+    </footer>
+  </body>
 </html>
