--- a/pages/pagesHtml/principalMichele.html
+++ b/pages/pagesHtml/principalMichele.html
@@ -4,30 +4,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Caverna Nerd</title>
-    <link rel="stylesheet" href="/pages/styelsSheets/principal.css">
-
+    
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Cinzel+Decorative:wght@400;700;900&display=swap" rel="stylesheet">
-
+    
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&display=swap" rel="stylesheet">
-
-    <div class="container">
-        <div class="content">
-            <a href="/pages/pagesHtml/VitrineMurilo.html" class="icon-container" target="_blank">
-                <div class="icon icon-fill">
-                    <i class="fa fa-home"></i>
-                    <span class="text">Clique aqui para acessar</span>
-                </div>
-            </a>
-        </div>
+    <link rel="stylesheet" href="../styelsSheets/PrincipalMichele.css">
 
 </head>
 <body>
     <header>
-        <img id="logo" src="/imagem/1.png" alt="logoCaverna Nerd">
+            <div class="content">
+                <img id="logo" src="../../images/1.png" alt="logoCaverna Nerd">
+                <a href="../pagesHtml/VitrineMurilo.html" class="icon-container">
+                    <div class="icon icon-fill">
+                        <i class="fa fa-home"></i>
+                        <span class="text">Clique aqui para acessar</span>
+                    </div>
+                </a>
+            </div> 
     </header>
     <main>
         <div id="home">
@@ -40,7 +38,7 @@
                     Aqui, celebramos o mundo geek com produtos de alta qualidade que trazem seus personagens e universos favoritos para mais perto de você.</p>
             </div>
             <div>
-                <img id="imgloja" src="/imagem/mockup.png" alt="">
+                <img id="imgloja" src="../../images/mockup.png" alt="">
             </div>
         </div>
     </main>
