--- a/pages/pagesHtml/principalMichele.html
+++ b/pages/pagesHtml/principalMichele.html
@@ -30,7 +30,7 @@
     <main>
         <div id="home">
             <div id="descicaoT">
-                <h1> A Carverna Nerd</h1>
+                <h1> A carverna nerd</h1>
                 <p>é o refúgio perfeito para os fãs de cultura geek e nerd.<br>
                     Com uma atmosfera única e acolhedora, nossa loja oferece uma vasta seleção de acessórios exclusivos para todos os gostos. <br>
                     De action figures e camisetas temáticas de animes, filmes e séries a itens colecionáveis de games e quadrinhos, <br>
