ajustei os button

--- a/pages/pagesHtml/VitrineMurilo.html
+++ b/pages/pagesHtml/VitrineMurilo.html
@@ -39,7 +39,7 @@
       <img id="imgProduto" src="../../images/jogo.jpg" alt="" />
 
       <input id="input" type="number" />
-      <button id="carrinho" onclick="mostrarProtudo(produtos[0])"><img class="icone" src="/images/carrinho2.png"
+      <button  onclick="mostrarProtudo(produtos[0])"><img class="icone" src="/images/carrinho2.png"
           alt="carrinho de compra"></button>
       <p id="preco0"></p>
     </div>
@@ -48,7 +48,7 @@
       <img id="imgProduto" src="../../images/jogowar.png" alt="" />
 
       <input id="input" type="number" />
-      <button id="carrinho" onclick="mostrarProtudo(produtos[1])"><img class="icone" src="/images/carrinho2.png"
+      <button  onclick="mostrarProtudo(produtos[1])"><img class="icone" src="/images/carrinho2.png"
           alt="carrinho de compra"></button>
       <p id="preco1"></p>
     </div>
@@ -57,7 +57,7 @@
       <img id="imgProduto" src="../../images/ataktitan.jpg" alt="" />
 
       <input id="input" type="number" />
-      <button id="carrinho" onclick="mostrarProtudo(produtos[2])"><img class="icone" src="/images/carrinho2.png"
+      <button  onclick="mostrarProtudo(produtos[2])"><img class="icone" src="/images/carrinho2.png"
           alt="carrinho de compra"></button>
       <p id="preco2"></p>
     </div>
@@ -66,7 +66,7 @@
       <img id="imgProduto" src="../../images/sololevel.png" alt="" />
 
       <input id="input" type="number" />
-      <button id="carrinho" onclick="mostrarProtudo(produtos[3])"><img class="icone" src="/images/carrinho2.png"
+      <button  onclick="mostrarProtudo(produtos[3])"><img class="icone" src="/images/carrinho2.png"
           alt="carrinho de compra"></button>
       <p id="preco3"></p>
     </div>
@@ -75,7 +75,7 @@
       <img id="imgProduto" src="../../images/supor.png" alt="" />
 
       <input id="input" type="number" />
-      <button id="carrinho" onclick="mostrarProtudo(produtos[4])"><img class="icone" src="/images/carrinho2.png"
+      <button  onclick="mostrarProtudo(produtos[4])"><img class="icone" src="/images/carrinho2.png"
           alt="carrinho de compra"></button>
       <p id="preco4"></p>
     </div>
@@ -83,7 +83,7 @@
       <h2 id="textProduto">Luminaria</h2>
       <img id="imgProduto" src="../../images/luminaria.jpg" alt="" />
       <input id="input" type="number" />
-      <button id="carrinho" onclick="mostrarProtudo(produtos[5])"><img  class="icone" src="/images/carrinho2.png"
+      <button  onclick="mostrarProtudo(produtos[5])"><img  class="icone" src="/images/carrinho2.png"
           alt="carrinho de compra"></button>
       <p id="preco5"></p>
     </div>
@@ -92,7 +92,7 @@
       <img id="imgProduto" src="../../images/harrypotter.jpg" alt="" />
 
       <input id="input" type="number" />
-      <button id="carrinho" onclick="mostrarProtudo(produtos[6])"><img class="icone" src="/images/carrinho2.png"
+      <button onclick="mostrarProtudo(produtos[6])"><img class="icone" src="/images/carrinho2.png"
           alt="carrinho de compra"></button>
       <p id="preco6"></p>
     </div>
@@ -101,13 +101,14 @@
       <img id="imgProduto" src="../../images/mesajogorpg.jpg" alt="" />
 
       <input id="input" type="number" />
-      <button id="carrinho" onclick="mostrarProtudo(produtos[7])"><img class="icone" src="/images/carrinho2.png"
+      <button  onclick="mostrarProtudo(produtos[7])"><img class="icone" src="/images/carrinho2.png"
           alt="carrinho de compra"></button>
       <p id="preco7"></p>
     </div>
     <div class="uniProduto">
       <h2 id="textProduto">Bonecos Naruto</h2>
       <img id="imgProduto" src="../../images/boneconaruto.jpg" alt="">
+      <input id="input" type="number" />
       <button onclick="mostrarProtudo(produtos[8])">
         <img class="icone" src="/images/carrinho2.png" alt="carrinho de compra">
       </button>
