não encoste na nav da vitrine por favor

--- a/pages/pagesHtml/Vendedores.html
+++ b/pages/pagesHtml/Vendedores.html
@@ -24,10 +24,10 @@
     <div class="container">
         <div class="vendedor">
             <img src="../../images/Ma.png" alt="Mateus">
-            <h3>Vendedor 1</h3>
-            <p>Especialista em Anime.</p>
-            <a href="https://linkdoVendedor1.com" class="botao-link">
-                <img src="../../images/paladino.jpeg" alt="Botão para Vendedor 5">
+            <h3>Mateus O Clerigo</h3>
+            <p>Especialista em Jogos e Mangás.</p>
+            <a href="https://wa.link/c3xoim" class="botao-link">
+                <img src="../../images/WhatsApp Image 2024-10-01 at 15.40.12.jpeg" alt="Botão para Vendedor 1">
             </a> Clique aqui
         </div>
 
@@ -36,7 +36,7 @@
             <h3>Murilo O Druida</h3>
             <p>O Gênio dos Jogos</p>
             <a href="https://w.app/pHxRUD" class="botao-link">
-                <img src="../../images/druida.jpg" alt="Botão para Vendedor 5">
+                <img src="../../images/druida.jpg" alt="Botão para Vendedor 2">
             </a> Clique aqui
         </div>
 
@@ -44,8 +44,8 @@
             <img src="../../images/Vi.png" alt="Vitor O Bárbaro">
             <h3>Vitor O Bárbaro</h3>
             <p>Especialista em Jogos.</p>
-            <a href="https://linkdoVendedor1.com" class="botao-link">
-                <img src="../../images/barbaro.jpg" alt="Botão para Vendedor 1">
+            <a href="https://wa.link/y4djh4"  class="botao-link">
+                <img src="../../images/barbaro.jpg" alt="Botão para Vendedor 3">
             </a> Clique aqui
         </div>
 
@@ -54,7 +54,7 @@
             <h3>Michele A Ranger</h3>
             <p>Especialista dos jogos de Tabuleiros e Vintage.</p>
             <a href="https://w.app/z9mn4M" class="botao-link">
-                <img src="../../images/ranger.jpg" alt="Botão para Vendedor 5">
+                <img src="../../images/ranger.jpg" alt="Botão para Vendedor 4">
             </a> Clique aqui
         </div>
 
