--- a/pages/pagesHtml/VitrineMurilo.html
+++ b/pages/pagesHtml/VitrineMurilo.html
@@ -39,79 +39,80 @@
       <img id="imgProduto" src="../../images/jogo.jpg" alt="" />
 
       <input id="input" type="number" />
-      <button id="carrinho" onclick="mostrarProtudo(produtos[0])"><img class="icone" src="/images/carrinho2.png"
+      <button  onclick="mostrarProtudo(produtos[0])"><img class="icone" src="/images/carrinho2.png"
           alt="carrinho de compra"></button>
-      <p id="preco0"></p>
+      <p id="preco0" class="preco"></p>
     </div>
     <div class="uniProduto">
       <h2 id="textProduto">Jogo War</h2>
       <img id="imgProduto" src="../../images/jogowar.png" alt="" />
 
       <input id="input" type="number" />
-      <button id="carrinho" onclick="mostrarProtudo(produtos[1])"><img class="icone" src="/images/carrinho2.png"
+      <button  onclick="mostrarProtudo(produtos[1])"><img class="icone" src="/images/carrinho2.png"
           alt="carrinho de compra"></button>
-      <p id="preco1"></p>
+      <p id="preco1" class="preco"></p>
     </div>
     <div class="uniProduto">
       <h2 id="textProduto">Camisa Atak Titan</h2>
       <img id="imgProduto" src="../../images/ataktitan.jpg" alt="" />
 
       <input id="input" type="number" />
-      <button id="carrinho" onclick="mostrarProtudo(produtos[2])"><img class="icone" src="/images/carrinho2.png"
+      <button  onclick="mostrarProtudo(produtos[2])"><img class="icone" src="/images/carrinho2.png"
           alt="carrinho de compra"></button>
-      <p id="preco2"></p>
+      <p id="preco2" class="preco"></p>
     </div>
     <div class="uniProduto">
       <h2 id="textProduto">Camiseta Solo Level</h2>
       <img id="imgProduto" src="../../images/sololevel.png" alt="" />
 
       <input id="input" type="number" />
-      <button id="carrinho" onclick="mostrarProtudo(produtos[3])"><img class="icone" src="/images/carrinho2.png"
+      <button  onclick="mostrarProtudo(produtos[3])"><img class="icone" src="/images/carrinho2.png"
           alt="carrinho de compra"></button>
-      <p id="preco3"></p>
+      <p id="preco3" class="preco"></p>
     </div>
     <div class="uniProduto">
       <h2 id="textProduto">Suporte para controle</h2>
       <img id="imgProduto" src="../../images/supor.png" alt="" />
 
       <input id="input" type="number" />
-      <button id="carrinho" onclick="mostrarProtudo(produtos[4])"><img class="icone" src="/images/carrinho2.png"
+      <button  onclick="mostrarProtudo(produtos[4])"><img class="icone" src="/images/carrinho2.png"
           alt="carrinho de compra"></button>
-      <p id="preco4"></p>
+      <p id="preco4" class="preco"></p>
     </div>
     <div class="uniProduto">
       <h2 id="textProduto">Luminaria</h2>
       <img id="imgProduto" src="../../images/luminaria.jpg" alt="" />
       <input id="input" type="number" />
-      <button id="carrinho" onclick="mostrarProtudo(produtos[5])"><img  class="icone" src="/images/carrinho2.png"
+      <button  onclick="mostrarProtudo(produtos[5])"><img  class="icone" src="/images/carrinho2.png"
           alt="carrinho de compra"></button>
-      <p id="preco5"></p>
+      <p id="preco5" class="preco"></p>
     </div>
     <div class="uniProduto">
       <h2 id="textProduto">Conjunto Harry Potter</h2>
       <img id="imgProduto" src="../../images/harrypotter.jpg" alt="" />
 
       <input id="input" type="number" />
-      <button id="carrinho" onclick="mostrarProtudo(produtos[6])"><img class="icone" src="/images/carrinho2.png"
+      <button onclick="mostrarProtudo(produtos[6])"><img class="icone" src="/images/carrinho2.png"
           alt="carrinho de compra"></button>
-      <p id="preco6"></p>
+      <p id="preco6" class="preco"></p>
     </div>
     <div class="uniProduto">
       <h2 id="textProduto">Messa para jogo RPG</h2>
       <img id="imgProduto" src="../../images/mesajogorpg.jpg" alt="" />
 
       <input id="input" type="number" />
-      <button id="carrinho" onclick="mostrarProtudo(produtos[7])"><img class="icone" src="/images/carrinho2.png"
+      <button  onclick="mostrarProtudo(produtos[7])"><img class="icone" src="/images/carrinho2.png"
           alt="carrinho de compra"></button>
-      <p id="preco7"></p>
+      <p id="preco7" class="preco"></p>
     </div>
     <div class="uniProduto">
       <h2 id="textProduto">Bonecos Naruto</h2>
       <img id="imgProduto" src="../../images/boneconaruto.jpg" alt="">
+      <input id="input" type="number" />
       <button onclick="mostrarProtudo(produtos[8])">
         <img class="icone" src="/images/carrinho2.png" alt="carrinho de compra">
       </button>
-      <p id="preco8"></p>
+      <p id="preco8" class="preco"></p>
     </div>
   </section>
   <footer class="footer">
