--- a/pages/pagesHtml/Vendedores.html
+++ b/pages/pagesHtml/Vendedores.html
@@ -69,10 +69,10 @@
 
         <div class="vendedor">
             <img src="../../images/Gu.png" alt="O Sábio">
-            <h3>Gustavo o Sábio</h3>
+            <h3>Gustavo O Mago</h3>
             <p>O Sábio dos Mangás</p>
             <a href="https://w.app/jky8Pb" class="botao-link">
-                <img src="../../images/sabio.jpeg" alt="Botão para Vendedor 6">
+                <img src="../../images/omago.jfif" alt="Botão para Vendedor 6">
             </a> Clique aqui
         </div>
     </div>
