--- a/pages/pagesHtml/VitrineMurilo.html
+++ b/pages/pagesHtml/VitrineMurilo.html
@@ -27,7 +27,7 @@
       </div>
       <div id="imglog">
         <img src="../../images/login.png" alt="imagenLogin" />
-        <p>Login</p>
+        <p id="lg">Login</p>
       </div>
       <div id="carrinho" class="car">  <img class="icone" src="/images/carrinho2.png"
         alt="carrinho de compra">(<span id="qnt-car"></span>)</div>
@@ -53,7 +53,7 @@
       <p id="preco1" class="preco"></p>
     </div>
     <div class="uniProduto">
-      <h2 id="textProduto">Camisa Atak Titan</h2>
+      <h2 id="textProduto">Camisa Attack on Titan</h2>
       <img id="imgProduto" src="../../images/ataktitan.jpg" alt="" />
 
       <input id="input" type="number" />
