--- a/pages/pagesHtml/formulario.html
+++ b/pages/pagesHtml/formulario.html
@@ -20,37 +20,65 @@
   </nav>
 
   <div class="box">
-    <form>
-      
+    <form onsubmit="enviar()">
+        <div class="atributos">
         <h4 id="titulo">Formulário de Contato:</h4>
         <br />
-        <label for="name">Nome:
+        <label for="name"
+          >Nome:
           <br />
-          <input type="text" id="nome" name="nome" required placeholder="Digite seu nome completo" />
+          <input
+            type="text"
+            id="name"
+            name="nome"
+            required
+            placeholder="Digite seu nome completo"
+          />
         </label>
         <br />
-        <label for="email">E-mail:
+        <label for="email"
+          >E-mail:
           <br />
-          <input type="email" id="email" name="email" required placeholder="Digite um email válido" />
+          <input
+            type="email"
+            id="email"
+            name="email"
+            required
+            placeholder="Digite um email válido"
+          />
         </label>
         <br />
         <p>Qual o motivo do contato ?</p>
-        <label><input id="check" type="checkbox" name="motivo" value="duvida" /> Dúvidas
-          Sobre os Produtos</label><br />
-        <label><input id="check" type="checkbox" name="motivo" value="reclamacao" />
-          Reclamações</label><br />
-        <label><input id="check" type="checkbox" name="motivo" value="elogio" />
-          Elogios</label><br />
-        <label><input id="check" type="checkbox" name="motivo" value="outro" />
-          Outros...</label>
+        <label
+          ><input id="check" type="checkbox" name="motivo" value="duvida" /> Dúvidas
+          Sobre os Produtos</label
+        ><br />
+        <label
+          ><input id="check" type="checkbox" name="motivo" value="reclamacao" />
+          Reclamações</label
+        ><br />
+        <label
+          ><input id="check" type="checkbox" name="motivo" value="elogio" />
+          Elogios</label
+        ><br />
+        <label
+          ><input id="check" type="checkbox" name="motivo" value="outro" />
+          Outros...</label
+        >
         <br />
-        <textarea id="texbox" name="mensagem" rows="3" cols="30" required></textarea>
+        <textarea
+          id="texbox"
+          name="mensagem"
+          rows="3"
+          cols="30"
+          required
+        ></textarea>
         <br />
-        <button onclick="enviar()">Enviar</button>
-      
-    </form>
+        <button type="submit">Enviar</button>
+        </div>
+      </form>
 
-  </div>
+</div>
 
   <footer>
     <p>&copy; 2024 Caverna Nerd. Todos os direitos reservados.</p>
